# 3mf-qr-code-generator

./: .gitignore  CONTRIBUTING.md  INSTALL.md  PROJECT.md  README.md  Taskfile.yml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/qr23mf/: __init__.py  cli.py  design_io.py  geometry.py  gui.py  qr.py
src/qr23mf/assets/: __init__.py
src/qr23mf/writers/: __init__.py  stl.py  svg.py  threemf.py
src/qr2stl/: __init__.py  cli.py
tests/: __init__.py  test_cli.py  test_design_io.py  test_geometry.py  test_qr.py  test_stl_writer.py  test_svg_writer.py  test_threemf_writer.py
vbrief/: PROJECT-DEFINITION.vbrief.json  specification.vbrief.json
vbrief/active/: 2026-04-17-bootstrap-python-skeleton.vbrief.json  2026-04-17-geometry-builder.vbrief.json  2026-04-17-qr-matrix-core.vbrief.json  2026-04-22-gui-saved-designs.vbrief.json
vbrief/completed/: 2026-04-22-gui-saved-designs.vbrief.json
vbrief/proposed/: 2026-04-17-3mf-writer.vbrief.json  2026-04-17-bootstrap-python-skeleton.vbrief.json  2026-04-17-docs-and-readme.vbrief.json  2026-04-17-geometry-builder.vbrief.json  2026-04-17-golden-fixture-tests.vbrief.json  2026-04-17-qr-matrix-core.vbrief.json  2026-04-17-stl-writer.vbrief.json  2026-04-17-typer-cli.vbrief.json  2026-04-22-gui-saved-designs.vbrief.json
